# VoxelMapping-python

./: .gitmodules  CMakeLists.txt  README.md  setup.py
example/: associate.py  evaluate_rpe.py  fuse_7scenes.py  fuse_custom.py  fuse_map_tum_full.py  fuse_scannet.py  utils.py
src/: ndarray_converter.cpp  py_vmapping.cpp  py_vmapping.h
